@@ -1,0 +1,25 @@
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = 'setuptools.build_meta'
+
+[tool.poetry]
+name = "lisacattools"
+version = "1.1.1"
+description = "A small example package for using LISA catalogs"
+license = "GPLV3"
+classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: GNU General Public License v3 (GPLv3)", "Operating System :: OS Independent"]
+homepage = "https://github.com/tlittenberg/lisacattools"
+authors = ["James I. Thorpe, Tyson B. Littenberg, Jean-Christophe Malapert <tyson.b.littenberg@nasa.gov>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "*"
+astropy = "==5.2.1"
+corner = "==2.2.1"
+healpy = "==1.16.2"
+"ligo.skymap" = "==1.0.4"
+matplotlib = "==3.6.3"
+pandas = "==1.5.2"
+seaborn = "==0.12.2"
+tables = "==3.8.0"
