@@ -12,3 +12,4 @@ robotframework==6.0.2
 Sphinx==6.1.3
 sphinx-gallery==0.8.2
 sphinx-rtd-theme==0.5.1
+tox==4.2.8
