@@ -4,7 +4,7 @@ Library                 lisacattools
 
 *** Variables ***
 ${name}                 lisacattools
-${version}              1.0.0
+${version}              1.1.1
 
 *** Test Cases ***
 Test library name
