@@ -1,0 +1,14 @@
+# pyenv local 3.8 3.9 3.10
+[tox]
+isolated_build = True
+envlist = 3.8,3.9,3.10
+skip_missing_interpreters=True
+
+[testenv]
+whitelist_externals = make
+commands =
+    pip install -U pip
+    make
+    pip install -r requirements-dev.txt
+    make test
+    make doc
